--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,25 +2,88 @@ spring:
   config:
     activate:
       on-profile: prod
-  devtools:
-    add-properties: true
+
+
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
-        format_sql: true
-
-environment:
-  info: product_environment
+        format_sql: false
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
+      timeout: 60000
 
-# application-prod.yml
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+
+  devtools:
+    restart:
+      enabled: false
+    add-properties: false
+
+
+logging:
+  level:
+    root: INFO
+    com.bangvan: INFO
+    org.springframework: WARN
+    org.hibernate: ERROR
+
+
+cloudinary:
+  cloud-name: ${CLOUDINARY_CLOUD_NAME}
+  api-key: ${CLOUDINARY_API_KEY}
+  api-secret: ${CLOUDINARY_API_SECRET}
+
+
 springdoc:
   api-docs:
     enabled: false
   swagger-ui:
     enabled: false
+
+
+payment:
+  vnpay:
+    url: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+    tmnCode: DD7EOCBJ
+    secretKey: W6R0XYAF795RNFJMZYR73BK9S8RIZVB6
+    returnUrl: http://localhost:8080/api/payments/vnpay-callback
+    version: 2.1.0
+    command: pay
+    orderType: other
+
+application:
+  security:
+    jwt:
+      secret-key: ${JWT_SECRET_KEY}
+      expiration: ${JWT_EXPIRATION} # Ví dụ: 86400000
+      refresh-token:
+        expiration: ${JWT_REFRESH_EXPIRATION} # Ví dụ: 604800000
