--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,35 +1,28 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   config:
     activate:
-      on-profile: prod
-
-
+      on-profile: dev
+  devtools:
+    add-properties: true
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-
-
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
-    show-sql: false
     properties:
       hibernate:
-        format_sql: false
         dialect: org.hibernate.dialect.PostgreSQLDialect
-
-
-  data:
-    redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
-      password: ${REDIS_PASSWORD}
-      timeout: 60000
-
-
+        jdbc:
+          time_zone: Asia/Ho_Chi_Minh
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+    defer-datasource-initialization: true
+#  sql:
+#    init:
+#      mode: always
   mail:
     host: smtp.gmail.com
     port: 587
@@ -43,50 +36,33 @@ spring:
             enable: true
 
 
-  devtools:
-    restart:
-      enabled: false
-    add-properties: false
+environment:
+  info: develop_environment
 
-
-logging:
-  level:
-    root: INFO
-    com.bangvan: INFO
-    org.springframework: WARN
-    org.hibernate: ERROR
-
-
+# application-dev.yml
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+openapi:
+  service:
+    api-docs: vsv-shop
+    server: http://localhost:${server.port}
+    title: VSV SHOP API
+    version: 1.0.0
+app:
+  jwt:
+    secret: ${JWT_SECRET_KEY}
+    expiration-milliseconds: ${JWT_EXPIRATION}
+    refresh-expiration-milliseconds: ${JWT_REFRESH_EXPIRATION}
+  redis:
+    port: ${REDIS_PORT}
+    host: ${REDIS_HOST}
+    password: ${REDIS_PASSWORD}
+  otp:
+    expiration-minutes: 15
 cloudinary:
   cloud-name: ${CLOUDINARY_CLOUD_NAME}
   api-key: ${CLOUDINARY_API_KEY}
   api-secret: ${CLOUDINARY_API_SECRET}
-
-
-springdoc:
-  api-docs:
-    enabled: false
-  swagger-ui:
-    enabled: false
-
-
-payment:
-  vnpay:
-    url: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-    tmnCode: DD7EOCBJ
-    secretKey: W6R0XYAF795RNFJMZYR73BK9S8RIZVB6
-    returnUrl: http://localhost:8080/api/payments/vnpay-callback
-    version: 2.1.0
-    command: pay
-    orderType: other
-
-application:
-  security:
-    jwt:
-      secret-key: ${JWT_SECRET_KEY}
-      expiration: ${JWT_EXPIRATION} # Ví dụ: 86400000
-      refresh-token:
-        expiration: ${JWT_REFRESH_EXPIRATION} # Ví dụ: 604800000
-
-  otp:
-    expiration-minutes: 15
