--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   main:
     allow-bean-definition-overriding: true
-  config:
-    activate:
-      on-profile: dev
+#  config:
+#    activate:
+#      on-profile: prod
   devtools:
     add-properties: true
   datasource:
